test/error/illTyped.dck
%-

(:def silly
  (:lambda func (-> text text)
    ("Helo, ${func}")))

(:def main
  silly)
